@@ -430,8 +430,14 @@ register_configvar(group,
                           "attribute."),
                 default_value = lambda: userdb.ldap_attr('user_id'),
             )),
+            ("lower_user_ids", FixedValue(
+                title  = _("Lower Case User-IDs"),
+                help   = _("Convert imported User-IDs to lower case during synchronisation."),
+                value  = True,
+                totext = _("Enforce lower case User-IDs."),
+            )),
         ],
-        optional_keys = ['scope', 'filter', 'user_id'],
+        optional_keys = ['scope', 'filter', 'user_id', 'lower_user_ids'],
     ),
     domain = "multisite",
 )
